--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,12 +26,6 @@ services:
       - postgres
     networks:
       - app-network
-    healthcheck: # Проверка на завершение работы
-      test: [ "CMD-SHELL", "! pgrep -f main.py && exit 0 || exit 1" ]
-      interval: 5s
-      timeout: 3s
-      retries: 5
-      start_period: 5s
 
   # Контейнер анализа данных
   analysis:
@@ -40,12 +34,10 @@ services:
       dockerfile: Dockerfile
     container_name: analysis-container
     depends_on:
-      postgres:  # Зависимость от PostgreSQL-контейнера
-        condition: service_started
-      data-parser: # Зависимость от парсинг-контейнера
-        condition: service_completed_successfully  # Ждём состояния
+      - postgres  # Зависимость от PostgreSQL-контейнера
+      - data-parser # Зависимость от парсинг-контейнера
     volumes:
-      - ./output:/home/jovyan/analytics/output  # Монтируем папку для вывода HTML-результата
+      - ./output:/home/jovyan/analytics/output:rw  # Монтируем папку для вывода HTML-результата
     ports:
       - "8888:8888"  # Открываем порт для Jupyter
     networks:
